fix error message alignment on mobile

--- a/style.css
+++ b/style.css
@@ -616,7 +616,7 @@ footer > .container > .text-center {
 @media (max-width: 575px) {  
 
 	.carousel-item {
-		height: 300px;
+		height: 325px;
 	}
 
 	img.brand-logo {
@@ -719,9 +719,14 @@ footer > .container > .text-center {
 		margin-right: 5px;
 	}
 
-	.post-content, .post-errortext {
+	.post-content {
 		margin-left: 10px;
     	margin-right: 10px;
+	}
+
+	.post-errortext {
+		margin-left: 15px;
+		margin-right: 15px;
 	}
 
 	.fa-star, 
@@ -920,9 +925,7 @@ footer > .container > .text-center {
 		padding: 8px;
 	}
 
-	.post-errortext {
-		margin-left: 0px;
-	}
+
 
 	.post-content > ul li, 
 	.post-content > ol li > ul li,
